<resources>
    <string name="app_name">Happy Places</string>
    <string name="happy_places">Happy Places</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="share_success_text">The application is shared on other platforms</string>
    <string name="username">Andrei Handra</string>
    <string name="email">andreihandra1@gmail.com</string>
    <string name="this_is_an_about_fragment">This is an app developed for the course Android Fundamentals with Kotlin.
                                            It represents an application called Happy Places, where the user can add edit and see the places where they went,
                                            as well as add information about that particular place</string>
    <string name="contact_information_fragment">Contact us. You can reach us by email, phone call, or visiting us at our headquarters.</string>
    <string name="add_new_place">Add new Place</string>
    <string name="enter_place_name">Enter place name</string>
    <string name="select_date">Select Date</string>
    <string name="mood">Mood:</string>
    <string name="place_type">Place type</string>
    <string name="activity_type">Activity type</string>
    <string name="add_a_note">Add a note</string>
    <string name="enter_location">Enter Location</string>
    <string name="save_place">Save place</string>
    <string name="contact_details">Email: contactus@yahoo.com\n
                                    Phone number: +40751111124\n
                                    Location: Romania</string>
</resources>